# connectbot

./: build.gradle.kts  gradle.properties
app/: CMakeLists.txt  build.gradle.kts
app/schemas/org.connectbot.data.ConnectBotDatabase/: 2.json  8.json
app/src/androidTest/java/org/connectbot/service/: TerminalBridgeWriteSerializationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: org_mosh_MoshClient.cpp
app/src/main/java/org/connectbot/data/: ConnectBotDatabase.kt  HostRepository.kt  SchemaBasedExporter.kt
app/src/main/java/org/connectbot/data/entity/: Host.kt  KeyStorageType.kt  PortForward.kt  Pubkey.kt
app/src/main/java/org/connectbot/data/migration/: DatabaseMigrator.kt
app/src/main/java/org/connectbot/service/: PromptManager.kt  TerminalBridge.kt  TerminalBridgePrompts.kt  TerminalManager.kt
app/src/main/java/org/connectbot/transport/: AbsTransport.kt  JumpHostProxyData.java  Mosh.kt  SSH.java  SSH.kt  StreamSocket.java  Transport.kt
app/src/main/java/org/connectbot/ui/: MainActivity.kt
app/src/main/java/org/connectbot/ui/components/: InlinePrompt.kt  TerminalKeyboard.kt
app/src/main/java/org/connectbot/ui/navigation/: NavDestinations.kt  NavGraph.kt
app/src/main/java/org/connectbot/ui/screens/console/: ConsoleScreen.kt  ConsoleViewModel.kt
app/src/main/java/org/connectbot/ui/screens/generatepubkey/: GeneratePubkeyScreen.kt  GeneratePubkeyViewModel.kt
app/src/main/java/org/connectbot/ui/screens/hosteditor/: HostEditorScreen.kt  HostEditorViewModel.kt
app/src/main/java/org/connectbot/ui/screens/hostlist/: HostListScreen.kt  HostListViewModel.kt
app/src/main/java/org/connectbot/ui/screens/portforwardlist/: PortForwardEditorDialog.kt  PortForwardListScreen.kt  PortForwardListViewModel.kt
app/src/main/java/org/connectbot/ui/screens/pubkeyeditor/: PubkeyEditorViewModel.kt
app/src/main/java/org/connectbot/ui/screens/pubkeylist/: PubkeyListScreen.kt  PubkeyListViewModel.kt
app/src/main/java/org/connectbot/ui/screens/settings/: SettingsScreen.kt  (+1 more)
app/src/main/java/org/connectbot/util/: BiometricKeyManager.kt  FontManager.kt  InstallMosh.kt  PreferenceConstants.kt
app/src/main/java/org/mosh/: MoshClient.java
app/src/main/res/values/: arrays.xml  strings.xml
app/src/sharedTest/kotlin/org/connectbot/di/: TestBiometricModule.kt
app/src/test/java/org/connectbot/data/dao/: PortForwardDaoTest.kt
app/src/test/kotlin/org/connectbot/: HostListScreenTest.kt  SettingsScreenTest.kt
libs/: mosh.patch
(+4 files in other folders)
